--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,5 +6,6 @@ spring:
   # ===============================
   datasource:
     url: jdbc:postgresql://${CHRONOS_DB_HOST}:${CHRONOS_DB_PORT}/${CHRONOS_DB_NAME}
+    #url: ${DATABASE_URL}
     username: ${CHRONOS_DB_USERNAME}
     password: ${CHRONOS_DB_PASSWORD}
