--- a/build.gradle
+++ b/build.gradle
@@ -22,16 +22,14 @@ repositories {
 	mavenCentral()
 }
 
-
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-rest')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-jdbc')
-	runtime('com.h2database:h2')
 	runtime('org.postgresql:postgresql')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 
-	compile 'com.google.api-client:google-api-client:1.23.0'
-	compile 'com.google.oauth-client:google-oauth-client-jetty:1.23.0'
-	compile 'com.google.apis:google-api-services-calendar:v3-rev266-1.23.0'
+	//compile 'com.google.api-client:google-api-client:1.23.0'
+	//compile 'com.google.oauth-client:google-oauth-client-jetty:1.23.0'
+	//compile 'com.google.apis:google-api-services-calendar:v3-rev266-1.23.0'
 }
